--- a/assets/styles/dark-mode.scss
+++ b/assets/styles/dark-mode.scss
@@ -44,6 +44,8 @@
 
   $modal-content-bg: $card-bg;
 
+  $popover-bg: $light;
+
   #top-level {
     background-color: #062c33;
   }
